[package]
name = "compile-stats-rav1e"
version = "0.1.0"
authors = ["Kyle Siefring <kylesiefring@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"